Mobile view fixes
Fixing an issue in mobile view where the header didnt cover the whole width and the form had unnecessary side-scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,8 @@ body {
 
 .container {
     padding: 20px;
-    width: 400px;
+    max-width: 400px;
+    width: 90vw;
     margin: auto;
 }
 
